simulator_engine/src/nl/tue/bpmn/parser/DistributionGrammarParser.java
// Generated from DistributionGrammar.g4 by ANTLR 4.4

    package nl.tue.bpmn.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DistributionGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__9=1, T__8=2, T__7=3, T__6=4, T__5=5, T__4=6, T__3=7, T__2=8, T__1=9, 
		T__0=10, TERM=11, NUMBER=12, WS=13;
	public static final String[] tokenNames = {
		"<INVALID>", "'%'", "'('", "')'", "'exp'", "'{'", "'['", "','", "'}'", 
		"']'", "'N'", "TERM", "NUMBER", "WS"
	};
	public static final int
		RULE_distribution = 0, RULE_value_series = 1, RULE_value = 2;
	public static final String[] ruleNames = {
		"distribution", "value_series", "value"
	};

	@Override
	public String getGrammarFileName() { return "DistributionGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DistributionGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DistributionContext extends ParserRuleContext {
		public TerminalNode NUMBER(int i) {
			return getToken(DistributionGrammarParser.NUMBER, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(DistributionGrammarParser.NUMBER); }
		public Value_seriesContext value_series() {
			return getRuleContext(Value_seriesContext.class,0);
		}
		public DistributionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distribution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DistributionGrammarListener ) ((DistributionGrammarListener)listener).enterDistribution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DistributionGrammarListener ) ((DistributionGrammarListener)listener).exitDistribution(this);
		}
	}

	public final DistributionContext distribution() throws RecognitionException {
		DistributionContext _localctx = new DistributionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_distribution);
		try {
			setState(20);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(6); match(T__6);
				setState(7); match(T__8);
				setState(8); match(NUMBER);
				setState(9); match(T__7);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(10); match(T__0);
				setState(11); match(T__8);
				setState(12); match(NUMBER);
				setState(13); match(T__3);
				setState(14); match(NUMBER);
				setState(15); match(T__7);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(16); match(T__4);
				setState(17); value_series();
				setState(18); match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Value_seriesContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public Value_seriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_series; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DistributionGrammarListener ) ((DistributionGrammarListener)listener).enterValue_series(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DistributionGrammarListener ) ((DistributionGrammarListener)listener).exitValue_series(this);
		}
	}

	public final Value_seriesContext value_series() throws RecognitionException {
		Value_seriesContext _localctx = new Value_seriesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_value_series);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22); value();
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(23); match(T__3);
				setState(24); value();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode TERM() { return getToken(DistributionGrammarParser.TERM, 0); }
		public TerminalNode NUMBER() { return getToken(DistributionGrammarParser.NUMBER, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DistributionGrammarListener ) ((DistributionGrammarListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DistributionGrammarListener ) ((DistributionGrammarListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); match(T__5);
			setState(31); match(TERM);
			setState(32); match(T__3);
			setState(33); match(NUMBER);
			setState(34); match(T__9);
			setState(35); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}